Add a test utility